client/assets/_main.scss
html {
  height: 100%;
}

/* http://fonts.googleapis.com/css?family=Montserrat:400,700 */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v7/zhcz-_WihjSQC0oHJ9TCYPk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: local('Montserrat-Bold'), url(https://fonts.gstatic.com/s/montserrat/v7/IQHow_FEYlDC4Gzy_m8fcoWiMMZ7xLd792ULpGE4W_Y.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

body {
  background: ghostwhite;
  margin: 0 0 50px 0;
  font-family: 'Montserrat', 'Open Sans', sans-serif;
}

.active-link {
  font-weight: 900;
  color: #000 !important;
}

.nav-link:hover {
  font-weight: 900;
}

/*ck editor override*/
.ck-editor pre {
  background-color: #7b7b7b;
  color: #000;
}

/*ag-grid override*/

.center-btn-cell {
  white-space: normal !important;
  overflow: visible;
  text-align: center;
  padding-top: 5px;
}

/*bootstrap override*/

a {
  word-wrap: break-word;
  -webkit-transition: color .1s ease-in, background .1s ease-in;
  transition: color .1s ease-in, background .1s ease-in
}

a:focus,
a:hover {
  color: #7b7b7b;
  text-decoration: none !important;
  font-weight: 900;
  outline: 0
}

a:after,
a:before {
  -webkit-transition: color .1s ease-in, background .1s ease-in;
  transition: color .1s ease-in, background .1s ease-in
}

.header-inline {
  display: inline-block;
}

.card {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
}

.btn:disabled {
  cursor: not-allowed;
}

.btn.active {
  background-color: #269abc !important;
  border-color: #1b6d85 !important;
  color: white !important;
}

.btn-toggle:focus,
.btn-toggle:active,
.btn-toggle:active:focus {
  outline: none;
  box-shadow: none;
}

.align-super {
  vertical-align: super;
}

label input,
label select,
label textarea {
  font-weight: normal;
}

.form-control.inline-control {
  width: 100%;
  display: inline-block;
}

.navbar-brand {
  font-size: 2rem !important;
  font-family: Courier;
}

/* end bootstrap override*/

/* animated labels */
.animated-label {
  position: relative;
}

.animated-label.animated-label-focus label,
.animated-label.animated-label-has-value label {
  -webkit-transform: translate3d(-10px, -24px, 0) scale(0.75);
  transform: translate3d(-10px, -24px, 0) scale(0.75);
  color: #000;
}

.animated-label label {
  position: absolute;
  left: 10px;
  top: 8px;
  font-weight: 300;
  -webkit-transform: translate3d(0, 0, 0) scale(1);
  transform: translate3d(0, 0, 0) scale(1);
  -webkit-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: 0 cubic-bezier(0.25, 0.8, 0.25, 1) .25s;
  transition: transform cubic-bezier(0.25, 0.8, 0.25, 1) .25s;
}

.animated-label.animated-label-focus label {
  color: #087aac;
}

/* end animated label*/

/* password-toggle */

.password-toggle {
  position: relative;
  display: block;
  user-select: none;
}

.password-toggle a {
  opacity: .5;
  cursor: pointer;
  display: inline-block;
  position: absolute;
  height: 1px;
  width: 45px;
  height: 45px;
  font-size: 0;
  background-repeat: no-repeat;
  background-size: 50%;
  background-position: center;
  top: 0;
  margin-left: -45px;
  z-index: 1;
  -webkit-tap-highlight-color: transparent;
}

.password-toggle [type="text"]+a {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23444' d='M29.6.4C29 0 28 0 27.4.4L21 6.8c-1.4-.5-3-.8-5-.8C9 6 3 10 0 16c1.3 2.6 3 4.8 5.4 6.5l-5 5c-.5.5-.5 1.5 0 2 .3.4.7.5 1 .5s1 0 1.2-.4l27-27C30 2 30 1 29.6.4zM13 10c1.3 0 2.4 1 2.8 2L12 15.8c-1-.4-2-1.5-2-2.8 0-1.7 1.3-3 3-3zm-9.6 6c1.2-2 2.8-3.5 4.7-4.7l.7-.2c-.4 1-.6 2-.6 3 0 1.8.6 3.4 1.6 4.7l-2 2c-1.6-1.2-3-2.7-4-4.4zM24 13.8c0-.8 0-1.7-.4-2.4l-10 10c.7.3 1.6.4 2.4.4 4.4 0 8-3.6 8-8z'/%3E%3Cpath fill='%23444' d='M26 9l-2.2 2.2c2 1.3 3.6 3 4.8 4.8-1.2 2-2.8 3.5-4.7 4.7-2.7 1.5-5.4 2.3-8 2.3-1.4 0-2.6 0-3.8-.4L10 25c2 .6 4 1 6 1 7 0 13-4 16-10-1.4-2.8-3.5-5.2-6-7z'/%3E%3C/svg%3E");
}

.password-toggle [type="password"]+a {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cpath fill='%23444' d='M16 6C9 6 3 10 0 16c3 6 9 10 16 10s13-4 16-10c-3-6-9-10-16-10zm8 5.3c1.8 1.2 3.4 2.8 4.6 4.7-1.2 2-2.8 3.5-4.7 4.7-3 1.5-6 2.3-8 2.3s-6-.8-8-2.3C6 19.5 4 18 3 16c1.5-2 3-3.5 5-4.7l.6-.2C8 12 8 13 8 14c0 4.5 3.5 8 8 8s8-3.5 8-8c0-1-.3-2-.6-2.6l.4.3zM16 13c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3 3 1.3 3 3z'/%3E%3C/svg%3E");
}

/* end password toggle */

/* icon font size override */

[class^="icon-"].md-18 {
  font-size: 18px;
}

/* Default */
[class^="icon-"].md-24 {
  font-size: 24px;
}

[class^="icon-"].md-36 {
  font-size: 36px;
}

[class^="icon-"].md-48 {
  font-size: 48px;
}

/* end font awesome override */

/*Toggle switch*/


/* The switch - the box around the slider */

.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 15px;
  vertical-align: middle;
}


/* Hide default HTML checkbox */

.switch input {
  display: none;
}

.checkbox-slider {
  display: inline-block !important;
  padding: 10px;
}

.checkbox-label {
  vertical-align: text-bottom;
  font-weight: bold;
  cursor: pointer;
}

/* Checkbox slider */

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 25px;
  width: 25px;
  left: 0px;
  bottom: -5px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
  background-color: grey;
}

input:checked+.slider {
  background-color: #66b3ff;
}

input:checked+.slider.include {
  background-color: #99e699;
}

input:checked+.slider.exclude {
  background-color: #ff9999;
}

input:focus+.slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

input[disabled]+.slider:before {
  background-color: #BBB;
}

input[disabled]:checked+.slider:before,
input[disabled]:checked+.slider.round:before {
  background-color: #0080ff;
}

/* End checkbox slider */


/* Rounded sliders */

.slider.round {
  border-radius: 35px;
}

.slider.round:before {
  border-radius: 50%;
}

input:checked+.slider.round:before {
  border-radius: 50%;
  background-color: #0080ff;
}

input:checked+.slider.round.include:before {
  background-color: #33cc33;
}

input:checked+.slider.round.exclude:before {
  background-color: #ff0000;
}

/* End rounded sliders */
/* End Toggle switch */

/*input field classes*/

.ng-valid[required] {
  border-left: 5px solid #42A948;
}

.restricted-textarea {
  max-width: 100%;
  max-height: 150px;
}

/* Comma delimited list */
.comma:not(:last-of-type):after {
  content: ",";
}

.comma:nth-last-of-type(2):before {
  content: none;
}

.comma:nth-last-of-type(2):after {
  content: ",";
}

/* End comma delimited list */

/* --------------------------------

Flipping Icons

-------------------------------- */
.social-icons .item {
  display: inline-block;
  margin: 5px;
  width: 50px;
  height: 50px;
  transition: .3s all;
  position: relative;
  -webkit-transition: .3s all;
  text-align: center;
  color: #fff;
  background-color: #fff;
  line-height: 48px;
  border-radius: 50px;
  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
  -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
  box-shadow: 0px 5px 11px 0px rgba(0, 0, 0, 0.18), 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
}

.social-icons.spinned .item:hover {
  -webkit-animation: Social-Icons-Flipping .3s;
  animation: Social-Icons-Flipping .3s
}

.social-icons .item:hover {
  text-decoration: none;
  background-color: #42474E;
  box-shadow: 0 -1px 0 transparent inset, 0 2px 3px rgba(0, 0, 0, .1), 0 4px 8px rgba(0, 0, 0, .3);
  color: #fff !important
}

.social-icons .item .fa {
  font-size: 15px;
  font-weight: 500;
}

.social-icons .facebook {
  color: #425F9C !important
}

.social-icons .twitter {
  color: #00ACEE !important
}

.social-icons .google {
  color: #c00 !important
}

.social-icons .linkedin {
  color: #0073B2 !important
}

.social-icons .email {
  color: #555 !important
}

.social-icons .youtube {
  color: #EB3E40 !important
}

.social-icons .instagram {
  color: #5E8AAC !important
}

.facebook:hover {
  background-color: #425F9C !important
}

.twitter:hover {
  background-color: #00ACEE !important
}

.google:hover {
  background-color: #c00 !important
}

.linkedin:hover {
  background-color: #0073B2 !important
}

.email:hover {
  background-color: #555 !important
}

.youtube:hover {
  background-color: #EB3E40 !important
}

.instagram:hover {
  background-color: #5E8AAC !important
}

@-webkit-keyframes Social-Icons-Flipping {
  0% {
    -webkit-transform: rotate(0);
    transform: rotate(0)
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg)
  }
}

@keyframes Social-Icons-Flipping {
  0% {
    -webkit-transform: rotate(0);
    transform: rotate(0)
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg)
  }
}

/* end social icons*/

/* multi-line ellipse */
/* styles for '...' */
.block-with-text {
  /* hide text if it more than N lines  */
  overflow: hidden;
  /* for set '...' in absolute position */
  position: relative;
  /* use this value to count block height */
  line-height: 1.2em;
  /* max-height = line-height (1.2) * lines max number (3) */
  max-height: 3.6em;
  /* fix problem when last visible word doesn't adjoin right side  */
  text-align: justify;
  /* place for '...' */
  /* margin-right: -1em; */
  padding-right: 1em;
}

/* create the ... */
.block-with-text:before {
  /* points in the end */
  content: '...';
  /* absolute position */
  position: absolute;
  /* set position to right bottom corner of block */
  right: 0;
  bottom: 0;
}

/* hide ... if we have text, which is less than or equal to max lines */
.block-with-text:after {
  /* points in the end */
  content: '';
  /* absolute position */
  position: absolute;
  /* set position to right bottom corner of text */
  right: 0;
  /* set width and height */
  width: 1em;
  height: 1em;
  margin-top: 0.2em;
  /* bg color = bg color under block */
  background: white;
}

